# learn_c

./: .gitignore  99.cpp  README.md  gate.txt  makefile  readme.md  test.c  test.pl  txttest.c
DEV_C/Project/: CMakeLists.txt  main.c
DEV_C/Project/Pointers_on_c/: void_retrun.c
DEV_C/Project/Test/inc/: device_drv.h  main.h  queue.h  write_test.h
DEV_C/Project/Test/src/: device_drv.c  queue.c  write_test.c
c_Introduction_and_Advanced/: 10_短路.c  12_logx.c  13_算平均数.c  14_猜数.c  16_素数.c  19_求最大公约数.c  1_hello.c  20_正序分解整数.c  22_统计输入的数字.c  23_函数.c  24_本地变量.c  27_搜索.c  29_指针变量.c  30_字符串.c  31_字符串计算.c  3_plus.c  4_height.c  6_change.c  9_判断数字位数.c  C语言入门与进阶（翁恺）.md  a++_++a.c  hello.c  plusab.c  宏定义.c
c_Introduction_and_Advanced/src/: 11_switch_case.c  15_整数求逆.c  17_嵌套循环跳出.c  18_前n项和.c  21_数组.c  25_数组.c  26_素数表.c  28_取地址运算符.c  29_指针变量.c  2_scanf.c  30_指针运算.c  5_time.c  7_score.c  全局变量.c
c_and_pointer/src/: 1.1.c
c_and_pointer/txt/: 程序1.1.txt  程序11.1a.txt  程序11.1b.txt  程序11.1c.txt  程序11.2.txt  程序11.3.txt  程序11.4a.txt  程序11.4b.txt  程序11.4c.txt  程序12.1.txt  程序12.2.txt  程序12.3.txt  程序12.4.txt  程序12.5.txt  程序12.6.txt  (+59 more)
c_exercise/: 001.c  002.c  003.c  004.c  005.c  006.c  007.c  008.c  009.c  010.c  011.c  012.c  013.c  014.c  015.c  016.c  a++_++a.c  if_else.c  main函数的返回.c  prime.c  union类型.c  动态地址分配.c  指针变量.c  最大公约数.c  格式化输入输出.c
c_test/: Makefile.win  Queue.c  Queue.h  device_drv.c  device_drv.h  main.c  main.h  output.txt  test.dev  test.layout  write_test.c  write_test.h
files/: 99.cpp  README.md  filename.txt  git命令.md  test.c  test.cpp  test.py  testpp.c
(+4 files in other folders)
